# rtms

./: .gitignore  README.md  agent.md  architecture.md  host.md  mvp_scope.md  pyproject.toml  requirements.txt
agent/app/: __init__.py
agent/app/cli/: __init__.py  main.py
agent/app/core/: __init__.py  config.py
agent/app/executors/: __init__.py  build.py  capture.py  openocd.py  openocd_rtt_capture.py
agent/app/services/: api_client.py  bundles.py  high_altitude_cc_build.py  probes.py  runtime.py
agent/app/storage/: __init__.py  local_state.py
docs/: developer_setup.md  example_repos.json  operator_guide.md
rf_range_test_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rtms/: __init__.py
rtms/host/: __init__.py
rtms/host/app/: __init__.py
rtms/server/app/: __init__.py  main.py  presentation.py
rtms/shared/: __init__.py  enums.py  high_altitude_cc.py  manifest.py  mlog.py  schemas.py  state_machine.py  time_sync.py
scripts/: bootstrap_agent_linux.sh  bootstrap_agent_macos.sh  bootstrap_agent_windows.ps1  bootstrap_host_linux.sh  bootstrap_host_macos.sh  bootstrap_host_windows.ps1  run_agent.sh  run_host.sh  run_server.sh
server/app/: main.py  presentation.py
server/app/api/: agent.py  operator.py
server/app/core/: auth.py  config.py
server/app/db/: base.py  session.py
server/app/models/: entities.py
shared/: __init__.py  enums.py  high_altitude_cc.py  manifest.py  mlog.py  schemas.py  state_machine.py
tests/: conftest.py  test_agent_cli.py  test_api.py  test_bootstrap_scripts.py  test_build_executor.py  test_bundle.py  test_capture_executor.py  test_github_service.py  test_high_altitude_cc_build.py  test_high_altitude_cc_config.py  test_host_cli.py  test_openocd_executor.py  test_openocd_rtt_capture.py  test_parser.py  test_prebuilt_upload.py  test_probe_inventory.py  test_session_service.py  test_state_machine.py  test_time_sync.py
(+91 files in other folders)
