[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtms"
version = "0.1.0"
description = "Distributed RF range-test orchestration MVP with a central server and remote hosts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "sqlalchemy>=2.0.31",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
]

[project.scripts]
rtms-server = "rtms.server.app.main:run"
rtms-host = "rtms.host.app.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rtms*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
